==> RutronikSystemSolutions/RutDevKit-PSoC62_TwinCAT_SGP30/ABCC/Src/abcc_adapt/abcc_sys_adapt.c <==
#include "abcc_drv_cfg.h"
#include "abcc_port.h"
#include "abcc_sys_adapt.h"
#include "abcc_sys_adapt_spi.h"
#include "abcc_sys_adapt_par.h"
#include "abcc_sys_adapt_ser.h"
#include "cycfg_pins.h"
#include "cyhal.h"
#define ABCC_SYS_OM0              	ARDU_ADC1
#define ABCC_SYS_OM1              	ARDU_ADC2
#define ABCC_SYS_OM2              	ARDU_ADC3
#define ABCC_SYS_OM3              	POT_ADC
#define ABCC_SYS_OM3_POR          	CYHAL_PORT_10
#define ABCC_SYS_OM3_PIN          	(5u)
#define ABCC_SYS_nRESET				ARDU_IO7
#define ABCC_SYS_MI0				ARDU_IO5
#define ABCC_SYS_MI1				ARDU_IO8
#define ABCC_SYS_MD					ARDU_IO3
#define ABCC_SYS_IRQ_PIN			ARDU_IO4
#define ABCC_IRQ_PRIORITY			(7u)
#define ABCC_SYS_SPI_HANDLE			hms_spi_obj
#define ABCC_SYS_SPI_NSS			ARDU_CS
#define ABCC_SYS_SPI_NSS_POR		CYHAL_PORT_8
#define ABCC_SYS_SPI_NSS_PIN		(3u)
#define ABCC_SYS_SPI_NSS_ON			cyhal_gpio_write(ABCC_SYS_SPI_NSS, false)
#define ABCC_SYS_SPI_NSS_OFF		cyhal_gpio_write(ABCC_SYS_SPI_NSS, true)
#define ABCC_SYS_SPI_MOSI			ARDU_MOSI
#define ABCC_SYS_SPI_MISO			ARDU_MISO
#define ABCC_SYS_SPI_CLK			ARDU_CLK
#define ABCC_SYS_SPI_FREQ			10000000UL
#define ABCC_SYS_SER_UART_HANDLE	hms_uart_obj
#define ABCC_SYS_SER_UART_RX		ARDU_RX
#define ABCC_SYS_SER_UART_TX		ARDU_TX

static void ABCC_SYS_UartInit( UINT8 bOpmode )
{
	cy_rslt_t result;

	result = cyhal_uart_init(&ABCC_SYS_SER_UART_HANDLE, ABCC_SYS_SER_UART_TX, ABCC_SYS_SER_UART_RX, NULL, &hms_uart_config);
	if(result != CY_RSLT_SUCCESS)
	{
		 CY_ASSERT(0);
	}

   /* Ensure that OM3 is configured as an Input */
   if( bOpmode == ABP_OP_MODE_SERIAL_19_2 )
   {
      result = cyhal_uart_set_baud(&ABCC_SYS_SER_UART_HANDLE, 19200, NULL);
      if(result != CY_RSLT_SUCCESS)
      {
    	  CY_ASSERT(0);
      }
   }
   else if( bOpmode == ABP_OP_MODE_SERIAL_57_6 )
   {
      result = cyhal_uart_set_baud(&ABCC_SYS_SER_UART_HANDLE, 57600, NULL);
      if(result != CY_RSLT_SUCCESS)
      {
    	  CY_ASSERT(0);
      }
   }
   else if( bOpmode == ABP_OP_MODE_SERIAL_115_2 )
   {
      result = cyhal_uart_set_baud(&ABCC_SYS_SER_UART_HANDLE, 115200, NULL);
      if(result != CY_RSLT_SUCCESS)
      {
    	  CY_ASSERT(0);
      }
   }
   else if (bOpmode == ABP_OP_MODE_SERIAL_625)
   {
      result = cyhal_uart_set_baud(&ABCC_SYS_SER_UART_HANDLE, 625000, NULL);
      if(result != CY_RSLT_SUCCESS)
      {
    	  CY_ASSERT(0);
      }
   }
}

static void ABCC_SYS_SpiInit(void)
{
	cy_rslt_t result;

	result = cyhal_spi_init(&ABCC_SYS_SPI_HANDLE,
			ABCC_SYS_SPI_MOSI,
			ABCC_SYS_SPI_MISO,
			ABCC_SYS_SPI_CLK,
			ABCC_SYS_SPI_NSS,
			NULL,
			8,
			CYHAL_SPI_MODE_00_MSB,
			false);
    if(result != CY_RSLT_SUCCESS)
    {
  	  CY_ASSERT(0);
    }

    result = cyhal_spi_set_frequency(&ABCC_SYS_SPI_HANDLE, ABCC_SYS_SPI_FREQ);
    if(result != CY_RSLT_SUCCESS)
    {
  	  CY_ASSERT(0);
    }
}

BOOL ABCC_SYS_HwInit( void )
{
   /*
   ** Implement according to abcc_sys_adapt.h
   */
#if(ABCC_CFG_INT_ENABLED)
	{
		ABCC_SYS_AbccInterruptDisable();
	}
#endif

	//No further actions, option board is powered without MCU
	ABCC_SYS_HWReset();
	CyDelay(5);
	return TRUE;
}

void ABCC_SYS_SetOpmode( UINT8 bOpmode )
{
   cyhal_gpio_write(ABCC_SYS_OM0, false);
   cyhal_gpio_write(ABCC_SYS_OM1, false);
   cyhal_gpio_write(ABCC_SYS_OM2, false);
   cyhal_gpio_write(ABCC_SYS_OM3, false);

   /* OM0 */
   if( ( bOpmode & 0x01 ) == 0x01 )
   {
      cyhal_gpio_write(ABCC_SYS_OM0, true);
   }

   /* OM1 */
   if( ( bOpmode & 0x02 ) == 0x02 )
   {
      cyhal_gpio_write(ABCC_SYS_OM1, true);
   }

   /* OM2 */
   if( ( bOpmode & 0x04 ) == 0x04 )
   {
      cyhal_gpio_write(ABCC_SYS_OM2, true);
   }

   /* OM3 */
   if( ( bOpmode & 0x08 ) == 0x08 )
   {
      cyhal_gpio_write(ABCC_SYS_OM3, true);
   }

   /* Peripherals will be re-initialized according to operating mode */
   if( bOpmode >= ABP_OP_MODE_SERIAL_19_2 )
   {
#if( ABCC_CFG_DRV_SERIAL )
      /* Serial op mode selected. Configure serial port */
      ABCC_SYS_UartInit( bOpmode );
#endif
   }
   else
   {
	   if(ABCC_SYS_SER_UART_HANDLE.base != NULL)
	   {
		   cyhal_uart_free(&ABCC_SYS_SER_UART_HANDLE);
	   }
   }

   if( bOpmode == ABP_OP_MODE_SPI )
   {
#if( ABCC_CFG_DRV_SPI )
      ABCC_SYS_SpiInit();
#endif
   }
   else
   {
	   if(ABCC_SYS_SPI_HANDLE.base != NULL)
	   {
		   cyhal_spi_free( &ABCC_SYS_SPI_HANDLE );
	   }
   }

   if( ( ( bOpmode != ABP_OP_MODE_16_BIT_PARALLEL ) &&
         ( bOpmode != ABP_OP_MODE_8_BIT_PARALLEL ) ) )
   {

   }

   if( ( bOpmode == ABP_OP_MODE_16_BIT_PARALLEL ) ||
       ( bOpmode == ABP_OP_MODE_8_BIT_PARALLEL ) )
   {
      /* Initialize parallel controller */
#if( ABCC_CFG_DRV_PARALLEL || ABCC_CFG_DRV_PARALLEL_30 )
      ABCC_SYS_FsmcInit( bOpmode );
#endif
   }
   CyDelay(5);
}

void ABCC_SYS_HWReset( void )
{
   /*
   ** Implement according to abcc_sys_adapt.h
   */
	cyhal_gpio_write(ABCC_SYS_nRESET, false);
	CyDelay(1);
}

void ABCC_SYS_HWReleaseReset( void )
{
   /*
   ** Implement according to abcc_sys_adapt.h
   */
	cyhal_gpio_write(ABCC_SYS_nRESET, true);
	CyDelay(1);
}

UINT8 ABCC_SYS_ReadModuleId( void )
{
   /*
   ** Implement according to abcc_sys_adapt.h
   */
	UINT8 bRet = 0x00;
	if(cyhal_gpio_read(ABCC_SYS_MI0) == true)
	{
		bRet |= 0x01;
	}

	if(cyhal_gpio_read(ABCC_SYS_MI1) == true)
	{
		bRet |= 0x02;
	}

	return bRet;
}

BOOL ABCC_SYS_ModuleDetect( void )
{
   /*
   ** Implement according to abcc_sys_adapt.h
   */
	if(cyhal_gpio_read(ABCC_SYS_MD) == false)
	{
		return (TRUE);
	}
	else
	{
		return (FALSE);
	}
}

void ABCC_SYS_AbccInterruptEnable( void )
{
	cy_rslt_t result;

	result = hms_irq_init();
    if (result != CY_RSLT_SUCCESS)
    {
        CY_ASSERT(0);
    }
}

void ABCC_SYS_SpiSendReceive( void* pxSendDataBuffer, void* pxReceiveDataBuffer, UINT16 iLength)
{
   /*
   ** Implement according to abcc_sys_adapt_spi.h
   */
	cy_rslt_t result;

	result = cyhal_spi_transfer(&ABCC_SYS_SPI_HANDLE, pxSendDataBuffer, iLength, pxReceiveDataBuffer, iLength, 0xFF);

    if(result != CY_RSLT_SUCCESS)
    {
  	  CY_ASSERT(0);
    }
	pnDataReadyCbf();
}

void ABCC_SYS_SerSendReceive( void* pxTxDataBuffer, void* pxRxDataBuffer, UINT16 iTxSize, UINT16 iRxSize )
{
   /* Perform a blocking transmission */
   if( cyhal_uart_write( &ABCC_SYS_SER_UART_HANDLE, pxTxDataBuffer, (size_t*)&iTxSize ) != CY_RSLT_SUCCESS )
   {
      /* Error */
      return;
   }

   /* Perform a blocking reception */
   if( cyhal_uart_read( &ABCC_SYS_SER_UART_HANDLE, pxRxDataBuffer, (size_t*)&iRxSize ) != CY_RSLT_SUCCESS )
   {
      /* Error */
      return;
   }

   if( pnSerDataReadyCbf )
   {
      pnSerDataReadyCbf();
   }
}
