==> vrain-solution/phoenixeye-edge-anybusTest/host-application-example-code-(for-compactcom-30-and-40-series)/Projects/STM3240G_Eval_Keil/abcc_adapt/abcc_sys_adapt.c <==
#include "abcc_drv_cfg.h"
#include "abcc_port.h"
#include "abcc_sys_adapt.h"
#include "abcc_sys_adapt_spi.h"
#include "abcc_sys_adapt_par.h"
#include "abcc_sys_adapt_ser.h"
#include "stm32f4xx_hal.h"
#include "fsmc.h"
#include "spi.h"
#include "usart.h"
#define ABCC_SYS_OM0                   GPIOI, GPIO_PIN_11
#define ABCC_SYS_OM1                   GPIOC, GPIO_PIN_0
#define ABCC_SYS_OM2                   GPIOC, GPIO_PIN_9
#define ABCC_SYS_OM3                   GPIOH, GPIO_PIN_4
#define ABCC_SYS_OM3_POR               GPIOH
#define ABCC_SYS_OM3_PIN               GPIO_PIN_4
#define ABCC_SYS_nRESET                GPIOG, GPIO_PIN_8
#define ABCC_SYS_MD0                   GPIOF, GPIO_PIN_6
#define ABCC_SYS_MD1                   GPIOF, GPIO_PIN_7
#define ABCC_SYS_MI0                   GPIOG, GPIO_PIN_7
#define ABCC_SYS_MI1                   GPIOA, GPIO_PIN_4
#define ABCC_SYS_IRQ_POLL              GPIOF, GPIO_PIN_10
#define ABCC_SYS_IRQ_PIN               GPIO_PIN_10
#define ABCC_SYS_IRQn                  EXTI15_10_IRQn
#define ABCC_SYS_SPI_HANDLE            hspi2
#define ABCC_SYS_SPI_INSTANCE          SPI2
#define ABCC_SYS_SPI_NSS               GPIOI, GPIO_PIN_0
#define ABCC_SYS_SPI_NSS_POR           GPIOI
#define ABCC_SYS_SPI_NSS_PIN           GPIO_PIN_0
#define ABCC_SYS_SPI_NSS_ON            HAL_GPIO_WritePin(ABCC_SYS_SPI_NSS,GPIO_PIN_RESET)
#define ABCC_SYS_SPI_NSS_OFF           HAL_GPIO_WritePin(ABCC_SYS_SPI_NSS,GPIO_PIN_SET)
#define ABCC_SYS_SPI_TX_TIMEOUT_MS     1000

static void ABCC_SYS_UartInit( UINT8 bOpmode )
{
   /* Ensure that OM3 is configured as an Input */

   ABCC_SYS_SER_UART_HANDLE.Instance = ABCC_SYS_SER_UART;

   if( bOpmode == ABP_OP_MODE_SERIAL_19_2 )
   {
      ABCC_SYS_SER_UART_HANDLE.Init.BaudRate = 19200;
   }
   else if( bOpmode == ABP_OP_MODE_SERIAL_57_6 )
   {
      ABCC_SYS_SER_UART_HANDLE.Init.BaudRate = 57600;
   }
   else if( bOpmode == ABP_OP_MODE_SERIAL_115_2 )
   {
      ABCC_SYS_SER_UART_HANDLE.Init.BaudRate = 115200;
   }
   else if (bOpmode == ABP_OP_MODE_SERIAL_625)
   {
      ABCC_SYS_SER_UART_HANDLE.Init.BaudRate = 625000;
   }

   ABCC_SYS_SER_UART_HANDLE.Init.WordLength = UART_WORDLENGTH_8B;
   ABCC_SYS_SER_UART_HANDLE.Init.StopBits = UART_STOPBITS_1;
   ABCC_SYS_SER_UART_HANDLE.Init.Parity = UART_PARITY_NONE;
   ABCC_SYS_SER_UART_HANDLE.Init.Mode = UART_MODE_TX_RX;
   ABCC_SYS_SER_UART_HANDLE.Init.HwFlowCtl = UART_HWCONTROL_NONE;
   ABCC_SYS_SER_UART_HANDLE.Init.OverSampling = UART_OVERSAMPLING_16;
   HAL_UART_Init( &ABCC_SYS_SER_UART_HANDLE );
}

static void ABCC_SYS_SpiInit(void)
{
   GPIO_InitTypeDef GPIO_InitStruct;
#if( ( ABCC_SYS_SPI_4WIRE == FALSE ) || ( ABCC_SYS_SPI_CLK_IDLE_HIGH == TRUE ) )
   UINT8 abDummy[ 1 ] = { 0x00 };
#endif /* ((ABCC_SYS_SPI_4WIRE == FALSE) || (ABCC_SYS_SPI_CLK_IDLE_HIGH == TRUE)) */

   ABCC_SYS_SPI_HANDLE.Instance       = ABCC_SYS_SPI_INSTANCE;
   ABCC_SYS_SPI_HANDLE.Init.Mode      = SPI_MODE_MASTER;
   ABCC_SYS_SPI_HANDLE.Init.Direction = SPI_DIRECTION_2LINES;
   ABCC_SYS_SPI_HANDLE.Init.DataSize  = SPI_DATASIZE_8BIT;
#if( ( ABCC_SYS_SPI_4WIRE == FALSE ) || ( ABCC_SYS_SPI_CLK_IDLE_HIGH == TRUE ) )
   ABCC_SYS_SPI_HANDLE.Init.CLKPolarity = SPI_POLARITY_HIGH;
   ABCC_SYS_SPI_HANDLE.Init.CLKPhase    = SPI_PHASE_2EDGE;
#else  /* ((ABCC_SYS_SPI_4WIRE == FALSE) || (ABCC_SYS_SPI_CLK_IDLE_HIGH == TRUE)) */
   ABCC_SYS_SPI_HANDLE.Init.CLKPolarity = SPI_POLARITY_LOW;
   ABCC_SYS_SPI_HANDLE.Init.CLKPhase    = SPI_PHASE_1EDGE;
#endif /* ((ABCC_SYS_SPI_4WIRE == FALSE) || (ABCC_SYS_SPI_CLK_IDLE_HIGH == TRUE)) */
   ABCC_SYS_SPI_HANDLE.Init.NSS               = SPI_NSS_SOFT;
   ABCC_SYS_SPI_HANDLE.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
   ABCC_SYS_SPI_HANDLE.Init.FirstBit          = SPI_FIRSTBIT_MSB;
   ABCC_SYS_SPI_HANDLE.Init.TIMode            = SPI_TIMODE_DISABLE;
   ABCC_SYS_SPI_HANDLE.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE;
   ABCC_SYS_SPI_HANDLE.Init.CRCPolynomial     = 10;

   if( HAL_SPI_Init( &ABCC_SYS_SPI_HANDLE ) != HAL_OK )
   {
      Error_Handler();
   }

   /* Setup CS for software CS */
   GPIO_InitStruct.Pin   = ABCC_SYS_SPI_NSS_PIN;
   GPIO_InitStruct.Mode  = GPIO_MODE_OUTPUT_PP;
   GPIO_InitStruct.Pull  = GPIO_NOPULL;
   GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
   HAL_GPIO_Init( ABCC_SYS_SPI_NSS_POR, &GPIO_InitStruct );

#if( ABCC_SYS_SPI_4WIRE == FALSE )
   ABCC_SYS_SPI_NSS_ON;
#else
   ABCC_SYS_SPI_NSS_OFF;
#endif /* (ABCC_SYS_SPI_4WIRE == FALSE) */

#if( ( ABCC_SYS_SPI_4WIRE == FALSE ) || ( ABCC_SYS_SPI_CLK_IDLE_HIGH == TRUE ) )
   /* Send a dummy byte through SPI, this removes a glitch in SCLK that will
   ** otherwise corrupt the first SPI message */
   HAL_SPI_Transmit( &ABCC_SYS_SPI_HANDLE, abDummy, sizeof( abDummy ), ABCC_SYS_SPI_TX_TIMEOUT_MS );
#endif
}

BOOL ABCC_SYS_HwInit( void )
{
#if( ABCC_CFG_INT_ENABLED )
   ABCC_SYS_AbccInterruptDisable();
#endif
  /* Power option board */
   HAL_GPIO_WritePin( ABCC_SYS_OPT_BOARD_PWR, GPIO_PIN_RESET );

   /*
   ** Delay to ensure power up time
   */
   HAL_Delay( 5 );
   return TRUE;
}

void ABCC_SYS_SetOpmode( UINT8 bOpmode )
{
   HAL_GPIO_WritePin( ABCC_SYS_OM0, GPIO_PIN_RESET );
   HAL_GPIO_WritePin( ABCC_SYS_OM1, GPIO_PIN_RESET );
   HAL_GPIO_WritePin( ABCC_SYS_OM2, GPIO_PIN_RESET );
   HAL_GPIO_WritePin( ABCC_SYS_OM3, GPIO_PIN_RESET );

   /* OM0 */
   if( ( bOpmode & 0x01 ) == 0x01 )
   {
      HAL_GPIO_WritePin( ABCC_SYS_OM0, GPIO_PIN_SET );
   }

   /* OM1 */
   if( ( bOpmode & 0x02 ) == 0x02 )
   {
      HAL_GPIO_WritePin( ABCC_SYS_OM1, GPIO_PIN_SET );
   }

   /* OM2 */
   if( ( bOpmode & 0x04 ) == 0x04 )
   {
      HAL_GPIO_WritePin( ABCC_SYS_OM2, GPIO_PIN_SET );
   }

   /* OM3 */
   if( ( bOpmode & 0x08 ) == 0x08 )
   {
      HAL_GPIO_WritePin( ABCC_SYS_OM3, GPIO_PIN_SET );
   }

   /* Peripherals will be re-initialized according to operating mode */
   if( bOpmode >= ABP_OP_MODE_SERIAL_19_2 )
   {
#if( ABCC_CFG_DRV_SERIAL )
      /* Serial op mode selected. Configure serial port */
      ABCC_SYS_UartInit( bOpmode );
#endif
   }
   else
   {
      HAL_UART_DeInit( &huart6 );
   }

   if( bOpmode == ABP_OP_MODE_SPI )
   {
#if( ABCC_CFG_DRV_SPI )
      ABCC_SYS_SpiInit();
#endif
   }
   else
   {
      HAL_SPI_DeInit( &ABCC_SYS_SPI_HANDLE );
   }

   if( ( ( bOpmode != ABP_OP_MODE_16_BIT_PARALLEL ) &&
         ( bOpmode != ABP_OP_MODE_8_BIT_PARALLEL ) ) )
   {
#ifndef __USE_LCD
      HAL_SRAM_MspDeInit( &ABCC_SYS_PAR_SRAM_HANDLE );
#endif
   }

   if( ( bOpmode == ABP_OP_MODE_16_BIT_PARALLEL ) ||
       ( bOpmode == ABP_OP_MODE_8_BIT_PARALLEL ) )
   {
      /* Initialize parallel controller */
#if( ABCC_CFG_DRV_PARALLEL || ABCC_CFG_DRV_PARALLEL_30 )
      ABCC_SYS_FsmcInit( bOpmode );
#endif
   }
   HAL_Delay( 5 );
}

void ABCC_SYS_HWReset( void )
{
   HAL_GPIO_WritePin( ABCC_SYS_nRESET, GPIO_PIN_RESET );
   HAL_Delay( 1 );
}

void ABCC_SYS_HWReleaseReset( void )
{
   HAL_GPIO_WritePin( ABCC_SYS_nRESET, GPIO_PIN_SET );
   HAL_Delay( 1 );
}

UINT8 ABCC_SYS_ReadModuleId( void )
{
   UINT8 bRet = 0x00;

   if( HAL_GPIO_ReadPin( ABCC_SYS_MI0 ) == GPIO_PIN_SET )
   {
      bRet |= 0x01;
   }

   if( HAL_GPIO_ReadPin( ABCC_SYS_MI1 ) == GPIO_PIN_SET )
   {
      bRet |= 0x02;
   }

   return bRet;
}

BOOL ABCC_SYS_ModuleDetect( void )
{
   if( (HAL_GPIO_ReadPin(ABCC_SYS_MD0) == GPIO_PIN_RESET) &&
       (HAL_GPIO_ReadPin(ABCC_SYS_MD1) == GPIO_PIN_RESET) )
   {
      return (TRUE);
   }
   else
   {
      return (FALSE);
   }
}

void ABCC_SYS_AbccInterruptEnable( void )
{
   HAL_NVIC_EnableIRQ(ABCC_SYS_IRQn);
}

void ABCC_SYS_SpiSendReceive( void* pxSendDataBuffer, void* pxReceiveDataBuffer, UINT16 iLength )
{
   HAL_StatusTypeDef ret;

#if ( ABCC_SYS_SPI_4WIRE )
   /* /SS Low*/
   ABCC_SYS_SPI_NSS_ON;
#endif /* ( ABCC_SYS_SPI_4WIRE ) */

   ret = HAL_SPI_TransmitReceive_DMA( &ABCC_SYS_SPI_HANDLE, ( uint8_t* )pxSendDataBuffer, ( uint8_t* )pxReceiveDataBuffer, iLength );

#if ( !ABCC_SYS_SPI_DELAY_CALLBACK )
#if ( ABCC_SYS_SPI_4WIRE )
   /* /SS High */
   ABCC_SYS_SPI_NSS_OFF;
#endif /* ( ABCC_SYS_SPI_4WIRE ) */
#endif /* ( !ABCC_SYS_SPI_DELAY_CALLBACK ) */

   if( ret != HAL_OK )
   {
      return;
   }

#if ( !ABCC_SYS_SPI_DELAY_CALLBACK )
   /* call back function for SPI receive */
   if( pnDataReadyCbf != NULL )
   {
      pnDataReadyCbf();
   }
   else
   {
      /* Error */
      return;
   }
#endif /* ( !ABCC_SYS_SPI_DELAY_CALLBACK ) */
}

void ABCC_SYS_SerSendReceive( void* pxTxDataBuffer, void* pxRxDataBuffer, UINT16 iTxSize, UINT16 iRxSize )
{
   /* Perform a blocking transmission */
   if( HAL_UART_Transmit( &ABCC_SYS_SER_UART_HANDLE, pxTxDataBuffer, iTxSize, 1000 ) != HAL_OK )
   {
      /* Error */
      return;
   }

   if( HAL_UART_Receive( &ABCC_SYS_SER_UART_HANDLE, pxRxDataBuffer, iRxSize, 1000 ) != HAL_OK )
   {
      /* Error */
      return;
   }

   if( pnSerDataReadyCbf )
   {
      pnSerDataReadyCbf();
   }
}
